# LifePoint

./: README.md  plan.txt  功课  智能机器人开发计划 .doc
ThinkerGuass/MesoLib/Mesolib/: CMakeLists.txt  breath.cpp  breath.h  gpio.cpp  gpio.h  main.cpp  meso_down.cpp  mesodevice.cpp  mesodevice.h
ThinkerGuass/水光/: ~$项目记录.docx  ~WRL1986.tmp  项目记录.docx  项目记录.vsdx
ThinkerGuass/水光/软件/MesoLib/mesoLib/: CMakeLists.txt
ThinkerGuass/水光/软件/MesoPro/: .mxproject  MesoPro.ioc
ThinkerGuass/水光/软件/MesoPro/Device/: beep.c  beep.h  buttom.c  buttom.h  duoji_motor.c  duoji_motor.h  ems.c  ems.h  led.c  led.h  postion_switch.c  postion_switch.h  rf.c  rf.h  tuiye_motor.c  tuiye_motor.h  tuizhen_motor.c  tuizhen_motor.h
ThinkerGuass/水光/软件/MesoPro/Device/Crc16/: crc16.h
ThinkerGuass/水光/软件/MesoPro/Device/com_3/: frame.c  frame.h
ThinkerGuass/水光/软件/MesoPro/Inc/: main.h  stm32f1xx_it.h
ThinkerGuass/水光/软件/MesoPro/MDK-ARM/: MesoPro.uvguix.Administrator  MesoPro.uvguix.admin  MesoPro.uvoptx  MesoPro.uvprojx  startup_stm32f103xe.lst
ThinkerGuass/水光/软件/MesoPro/MDK-ARM/MesoPro/: MesoPro.axf  MesoPro.build_log.htm  MesoPro.hex  MesoPro.htm  (+64 more)
ThinkerGuass/水光/软件/MesoPro/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
ThinkerGuass/水光/软件/MesoPro/task/: interface.c  interface.h  system.c  system.h
linux/program/Crc16/: Crc16.c
linux/program/com/: CMakeLists.txt  com.cpp  com.h  test.cpp
linux/program/comAnalyze/: CMakeLists.txt  comAnalyze.cpp  comAnalyze.h  frame.c  frame.h  test.cpp
work/808/808界面需求/: 808界面需求.docx
work/808/app/tools/: com.cpp  com.h
(+1 files in other folders)
